@@ -382,6 +382,8 @@ x2goclient (4.0.4.0-0x2go1) UNRELEASED; urgency=low
     - config_win.bat: enable release by default, fetch command line parameter
       and compare against debug. Enable debug and console features in that
       case.
+    - onmainwindow.cpp: follow-up to last translation fix. Actually handle
+      English locales correctly and don't duplicate code too much.
 
   [ Fernando Pedemonte ]
   * New upstream release (4.0.4.0):
